--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -18,17 +18,23 @@
     color: #223B44;
 }
 
+.cartTop {
+    margin: 0;
+}
+
 .cartTop>p {
     font-family: sans-serif;
     font-weight: 400;
     font-size: 35px;
     text-transform: capitalize;
     color: #223B44;
-    margin:0;
+    margin: 0;
 }
-.loginForm{
+
+.loginForm {
     width: 100%;
 }
+
 .details {
     display: flex;
     flex-direction: column;
@@ -36,18 +42,30 @@
     margin-bottom: 1vh;
     width: 60%;
     gap: 2vh;
+    position: relative;
 }
 
-.details input{
+.details input {
     background-color: #223B44;
     border: none;
-    border-radius:5px ;
+    border-radius: 5px;
     /* margin-bottom: 2vh; */
     height: 6vh;
-    color:white;
-    padding: 0vh 2vw;
+    color: white;
+    padding: 0vh 1.5vw;
     font-weight: 400;
     font-size: 15px;
+    /* outline: none; */
+}
+i{
+    position: absolute;
+    z-index: 1;
+    top: 70%;
+    left: 88%;
+    color: #01a0a5;
+}
+i:hover{
+    color: #00BCC2;
 }
 
 
@@ -55,22 +73,25 @@
 .rememberMe {
     display: flex;
     flex-direction: row;
-    font-size: smaller;
+    font-size: 12px;
     width: 60%;
-    padding-top: 1.5vh;
+    padding-top: 2.5vh;
     margin: auto;
     margin-bottom: 1vh;
     justify-content: space-between;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.rememberMe a{
+.rememberMe a {
     /* text-decoration: none; */
-    color:#223B44;
+    color: #223B44;
 }
+
 .loginForm {
     text-align: center;
 }
-.loginForm button{
+
+.loginForm button {
     width: 40%;
     margin: 2vh 0vw;
     padding: 1vh 0vw;
@@ -80,20 +101,22 @@
     font-weight: 500;
     transition: .2 ease-in-out;
 }
-.loginForm button:hover{
+
+.loginForm button:hover {
     /* transform:scale(1.1); */
     cursor: pointer;
     color: #025658;
 }
 
-.invalid{
+.invalid {
     /* color: #06743d; */
     color: red;
     font-size: 12px;
     margin: none;
 }
-.valid{
-    color: #06743d;
+
+.valid {
+    color: #06a556;
     font-size: 12px;
     margin: none;
 }
