--- a/src/styles/admin-dashboard.css
+++ b/src/styles/admin-dashboard.css
@@ -7,6 +7,8 @@
 .navnav {
     height: 11vh;
     position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .back-btn {
@@ -17,11 +19,13 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin: 2vh 0vh 0vh 0.2vw;
-    position: sticky;
+    margin: 2vh 0vh 0vh 0.5vw;
     background-color: #D9D9D9;
     border: none;
     border-radius: 3px;
+    position: sticky;
+    top: 12.5vh;
+    z-index: 1;
 }
 .back-btn i {
     font-size: 10px;
@@ -34,15 +38,23 @@
 
 .dashboard-body {
     display: flex;
-    gap: 2vw;
+    gap: 1.5vw;
 }
 
 .sidebar {
-    position: sticky;
     flex: 15;
     margin: 0vh 0.2vw;
+    margin: 0vh .5vw;
+    position: sticky;
+    top: 12vh;
 }
 .outlet{
     flex:80;
     background-color: #D9D9D9;
+    margin:0vh 1vw;
+    border-radius: 5px;
+    padding: 3vh 2vw;
 }
+
+
+
