--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -58,8 +58,9 @@
     z-index: 1;
     background-color: #D9D9D9;
     border-radius: 5px;
-    padding: 1vh 0.3vw;
+    padding: 2vh 0.3vw;
     top: 11.4vh;
+    box-shadow:-2px 3px 10px rgba(68, 63, 63, 0.2),2px 3px 10px rgba(68, 63, 63, 0.2);
 }
 
 .dropDown a {
