--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -56,7 +56,7 @@
 .dropDown {
     position: absolute;
     z-index: 1;
-    background-color: #D9D9D9;
+    background-color: #f8f8f8;
     border-radius: 5px;
     padding: 2vh 0.3vw;
     top: 11.4vh;
@@ -72,11 +72,12 @@
     margin: 0;
     padding: 0vh 1.2vw;
     font-size: 13px;
+    cursor: pointer;
+    
 }
 
 .dropDown p:hover {
     color: #00BCC2;
-    cursor: pointer;
 }
 
 .dropDown hr {
