--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -154,6 +154,11 @@ td {
     border-top: 0.1vh solid #95a8b1;
 }
 
+.fa-actions {
+    left: 88%;
+    font-size: 10px;
+}
+
 
 /* Modal Css */
 .modal {
