--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -20,6 +20,11 @@
     align-items: center;
     cursor: pointer;
 }
+.h5active{
+    border-bottom: 2px solid rgb(105, 103, 103);
+    color: #00BCC2;
+
+}
 
 .searchPanel {
     display: flex;
