--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,33 +1,51 @@
-.sidebar{
+.sidebar {
     background-color: #D9D9D9;
     border-radius: 5px;
     text-align: left;
-    padding: 1vh 1vh ;
+    padding: 1vh 1vh;
     height: fit-content;
     color: #223B44;
 }
-.sidebar h1{
+
+.sidebar h1 {
     margin-bottom: 0;
 }
-.sidebar-links h4 ,.sidebar h1{
+
+.sidebar-links h4,
+.sidebar h1 {
     padding-left: .3vw;
 }
 
-.fa-tag{padding:0vh 0.15vw;}
+.fa-tag {
+    padding: 0vh 0.15vw;
+}
 
-.sidebar hr{
+.sidebar hr {
     border: none;
     border-bottom: .1vh solid #b4b3b3;
+    margin: 0;
 }
-.sidebar-links i{
+
+.sidebar-links h4 {
+    padding-bottom: 3vh;
+    margin-bottom: 0;
+}
+
+
+.sidebar-links i {
     margin-right: .5vw;
     font-size: 14px;
 }
-.sidebar a{
+
+.sidebar a {
     text-decoration: none;
     color: #223B44;
-    color: black;
 }
-.active{
-    color: red;
+
+.sidebar a.active {
+    color: #01a4aa;
+    font-weight: 700;
+    display: inline-block;
+    border-bottom: 2px solid black;
+    width: 100%;
 }
