--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -1,7 +1,3 @@
-.user-page {
-    position: relative;
-}
-
 .filters {
     display: flex;
     width: fit-content;
@@ -89,6 +85,7 @@ thead td {
     padding-left: 5px;
     color: black;
     padding: .5vh 1vw;
+    font-weight: 400;
 
 }
 
@@ -141,7 +138,7 @@ td {
     font-size: 12px;
     padding: 1vh 1vw;
     border-radius: 5px;
-    transform: translateY(-10px);
+    transform: translateY(-1px);
     box-shadow: 0px 1px 20px rgba(34, 59, 68, .4);
 }
 
@@ -172,8 +169,6 @@ td {
     left: 0;
     right: 0;
     bottom: 0;
-    /* background-color: rgba(206, 203, 203, .7); */
-    opacity: 1;
     display: flex;
 }
 
@@ -185,7 +180,6 @@ td {
     padding: 1vh 0vw;
     border-radius: 10px;
     position: relative;
-    opacity: 1;
     filter: none;
     margin-top: 5%;
     margin-left: 17%;
@@ -238,7 +232,8 @@ td {
 }
 
 .userdet-form input:hover,
-.userdet-form select:hover {
+.userdet-form select:hover,
+.tt-area textarea:hover {
     border-bottom: 2px solid;
 }
 
@@ -266,4 +261,24 @@ td {
 
 .userdet-form button:hover {
     border: 1px solid #858282;
+}
+
+/* prod det modal additions */
+.tt-area{
+    text-align: left;
+    padding: 0vh 1.5vw;
+    width: 92%;
+    /* border: 1px solid; */
+}
+.tt-area textarea{
+    max-width: 100%;
+    min-width: 100%;
+    outline: none;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #b8b7b7;
+    min-height: 10vh;
+    max-height: 20vh;
+    font-family: sans-serif;
+    font-size: 14px;
 }
