--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -277,7 +277,7 @@ td {
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #b8b7b7;
-    min-height: 10vh;
+    /* min-height: vh; */
     max-height: 20vh;
     font-family: sans-serif;
     font-size: 14px;
