--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz@0,9..144;1,9..144&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
+body {
     margin: 0;
-    font-family: sans-serif ;
+    font-family: inter, sans-serif;
 }
+
 .modal-container {
     position: relative;
 }
