--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,33 @@ body {
 .modal-container {
     position: relative;
 }
+
+/* Loading Sections */
+.donut-wrapper{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.donut{
+    width: 3rem;
+    height: 3rem;
+    /* margin: 5rem; */
+    border-radius: 50%;
+    /* border: 0.3rem solid #4492a5; */
+    border: 0.3rem solid #003d4c44;
+    border-top-color:#003d4c ;
+    animation: 1s spin infinite linear;
+    animation-duration: 3s;
+}
+
+.multi{
+    border-bottom-color: #003d4c;
+}
+
+@keyframes spin{
+    to{
+        transform: rotate(360deg);
+    }
+}
